--- a/Ionic4/src/app/inspection-building/inspection-building-particular-risks/inspection-building-particular-risks.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-particular-risks/inspection-building-particular-risks.component.html
@@ -12,10 +12,10 @@
         <ion-list-header>{{'particularRisk' | translate}}</ion-list-header>
     
         <ion-segment [(ngModel)]="currentSegment" class="segmentRisk">
-          <ion-segment-button value="foundation" class="segment-risk">{{'foundation' | translate}}</ion-segment-button>
-          <ion-segment-button value="floor" class="segment-risk">{{'particularRiskFloor' | translate}}</ion-segment-button>
-          <ion-segment-button value="wall" class="segment-risk">{{'wall' | translate}}</ion-segment-button>
-          <ion-segment-button value="roof" class="segment-risk">{{'roof' | translate}}</ion-segment-button>
+          <ion-segment-button value="foundation" class="segment-risk" mode="ios">{{'foundation' | translate}}</ion-segment-button>
+          <ion-segment-button value="floor" class="segment-risk" mode="ios">{{'particularRiskFloor' | translate}}</ion-segment-button>
+          <ion-segment-button value="wall" class="segment-risk" mode="ios">{{'wall' | translate}}</ion-segment-button>
+          <ion-segment-button value="roof" class="segment-risk" mode="ios">{{'roof' | translate}}</ion-segment-button>
         </ion-segment>
       </div>
     
