--- a/Ionic4/src/app/inspection-building/components/building-particular-risk-detail/building-particular-risk-detail.component.html
+++ b/Ionic4/src/app/inspection-building/components/building-particular-risk-detail/building-particular-risk-detail.component.html
@@ -2,7 +2,7 @@
 
   <ion-item-group>
     <ion-item>
-      <ion-label>{{'weakened' | translate}}</ion-label>
+      <ion-label >{{'weakened' | translate}}</ion-label>
       <ion-toggle formControlName="isWeakened"></ion-toggle>
     </ion-item>
     <ion-item>
@@ -10,7 +10,7 @@
       <ion-toggle formControlName="hasOpening"></ion-toggle>
     </ion-item>
     <ion-item *ngIf="currentRiskType=='foundation'">
-      <ion-label>{{'measurement' | translate}}</ion-label>
+      <ion-label position="floating" color="tertiary">{{'measurement' | translate}}</ion-label>
       <ion-input type="text" maxlength="100" placeholder="{{'measurement' | translate}}" formControlName="dimension">
       </ion-input>
     </ion-item>
@@ -20,14 +20,14 @@
     <ion-item-divider color="light">{{'localization' | translate}}</ion-item-divider>
 
     <ion-item>
-      <ion-label>{{'wall' | translate}}</ion-label>
+      <ion-label position="floating" color="tertiary">{{'wall' | translate}}</ion-label>
       <ion-select formControlName="wall" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let item of walls" [value]="item">{{(item == '' ? 'notSpecified' : item) | translate}}</ion-select-option>
         </ion-select>
     </ion-item>
 
     <ion-item>
-        <ion-label>{{'division' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'division' | translate}}</ion-label>
         <ion-select formControlName="sector" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let item of sectors" [value]="item">{{(item == '' ? 'notSpecified' : item) | translate}} </ion-select-option>
         </ion-select>
