--- a/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
@@ -14,21 +14,21 @@
     <ion-item-group>
       <ion-item-divider>{{'building' | translate}}</ion-item-divider>
       <ion-item>
-        <ion-label>Alias</ion-label>
+        <ion-label position="floating" color="tertiary">Alias</ion-label>
         <ion-input placeholder="alias" type="text" maxlength="50" formControlName="aliasName"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label>{{'corporateName' | translate }}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'corporateName' | translate }}</ion-label>
         <ion-input placeholder="{{'corporateName' | translate }}" maxlength="50" type="text" formControlName="corporateName"></ion-input>
       </ion-item>
       <ion-item *ngIf="allTypes && allTypes.buildingTypes" >
-        <ion-label>{{'type' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'type' | translate}}</ion-label>
         <ion-select formControlName="idBuildingType" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let t of allTypes.buildingTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label>{{'garage' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'garage' | translate}}</ion-label>
         <ion-select formControlName="garageType" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let key of garageTypeKeys" [value]="key">
             {{"enumGarageType."+garageType[key] | translate}}
@@ -87,19 +87,19 @@
     <ion-item-group>
       <ion-item-divider>{{'construction' | translate}}</ion-item-divider>
       <ion-item>
-        <ion-label>{{'type' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'type' | translate}}</ion-label>
         <ion-select formControlName="idConstructionType" *ngIf="allTypes && allTypes.constructionTypes" color="secondary" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let t of allTypes.constructionTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label>{{'fireResistance' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'fireResistance' | translate}}</ion-label>
         <ion-select formControlName="idConstructionFireResistanceType" *ngIf="allTypes && allTypes.constructionFireResistanceTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let t of allTypes.constructionFireResistanceTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label>{{'siding' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'siding' | translate}}</ion-label>
         <ion-select formControlName="idBuildingSidingType" *ngIf="allTypes && allTypes.buildingSidingTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let t of allTypes.buildingSidingTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
         </ion-select>
@@ -109,13 +109,13 @@
     <ion-item-group>
       <ion-item-divider>{{'roof' | translate}}</ion-item-divider>
       <ion-item>
-        <ion-label>{{'type' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'type' | translate}}</ion-label>
         <ion-select formControlName="idRoofType" *ngIf="allTypes && allTypes.roofTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let t of allTypes.roofTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label>{{'material' | translate}}</ion-label>
+        <ion-label position="floating" color="tertiary">{{'material' | translate}}</ion-label>
         <ion-select formControlName="idRoofMaterialType" *ngIf="allTypes && allTypes.roofMaterialTypes" okText="Ok" cancelText="{{'cancel' | translate}}">
           <ion-select-option *ngFor="let t of allTypes.roofMaterialTypes | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
         </ion-select>
