--- a/Ionic4/src/app/inspection/inspection-survey/inspection-survey.component.html
+++ b/Ionic4/src/app/inspection/inspection-survey/inspection-survey.component.html
@@ -33,13 +33,13 @@
 <ion-footer class="page-footer">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-button (click)="previousQuestion()" *ngIf="previousQuestionAvailable" slot="start">
+      <ion-button (click)="goToPreviousQuestion()" *ngIf="previousQuestionAvailable" slot="start">
         <ion-icon slot="start" name="skip-backward"></ion-icon>
         {{'surveyPreviousQuestion' | translate}}
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="nextQuestion()" [disabled]="nextQuestionDisabled" slot="end">
+      <ion-button (click)="goToNextQuestion()" [disabled]="nextQuestionDisabled" slot="end">
         <ion-icon slot="end" name="skip-forward"></ion-icon>
         {{nextButtonTitle}}
       </ion-button>
