Refactor(#295) Stop specifying "px" when value is "0" in scss files.

--- a/Ionic4/src/app/inspection-building/components/building-hazardous-material-detail/building-hazardous-material-detail.component.scss
+++ b/Ionic4/src/app/inspection-building/components/building-hazardous-material-detail/building-hazardous-material-detail.component.scss
@@ -1,11 +1,11 @@
 ion-grid {
-    padding: 0px;
+    padding: 0;
 }
 
 ion-col {
-    padding: 0px;    
+    padding: 0;
 }
 
 ion-row {
-    padding: 0px;
+    padding: 0;
 }
