--- a/Ionic4/src/app/inspection/components/inspection-visit/inspection-visit.component.scss
+++ b/Ionic4/src/app/inspection/components/inspection-visit/inspection-visit.component.scss
@@ -22,8 +22,8 @@ ion-item .label {
   flex-flow: column;
 }
 .align-row ion-label:first-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 .align-row ion-textarea:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
