--- a/Ionic4/src/app/inspection/components/survey-parent-child-question/survey-parent-child-question.component.scss
+++ b/Ionic4/src/app/inspection/components/survey-parent-child-question/survey-parent-child-question.component.scss
@@ -15,7 +15,7 @@
 .parent-question-title {
   display: table;
   width: 100%;
-  padding: 0px 5px 0px 5px;
+  padding: 0 5px 0 5px;
 }
 
 .parent-question-title h4 {
