--- a/Ionic4/src/app/inspection/inspection-survey-summary/inspection-survey-summary.component.scss
+++ b/Ionic4/src/app/inspection/inspection-survey-summary/inspection-survey-summary.component.scss
@@ -2,13 +2,13 @@ ion-label {
   white-space: normal;
 }
 ion-list-header {
-  margin-bottom: 0px !important;
+  margin-bottom: 0 !important;
   background-color: var(--ion-color-tertiary);
   color: white;
 }
 
 .label {
-  margin: 0px;
+  margin: 0;
 }
 
 ion-item-divider {
