--- a/Ionic4/src/global.scss
+++ b/Ionic4/src/global.scss
@@ -77,8 +77,6 @@ ion-list-header {
     .item-inner {
       border-color: rgba(86, 61, 124, 0.1);
     }
-    .item-icon {
-    }
   }
 }
 
@@ -175,15 +173,15 @@ ion-navbar ion-icon {
 }
 
 [col-3] {
-  padding: 0px;
+  padding: 0;
 }
 
 .list-header-md {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   border-top: none;
 }
 .list-md {
-  margin: 0px 0 16px;
+  margin: 0 0 16px;
 }
 
 .toolbar-ios ion-title {
