--- a/Ionic4/src/app/inspection-list/inspection-list.page.html
+++ b/Ionic4/src/app/inspection-list/inspection-list.page.html
@@ -34,8 +34,8 @@
     </ion-card-content>
   </ion-card>
 
-  <div class="no-data-message" *ngIf="batches?.length == 0">
-    <h2>{{noDataMessage}}</h2>
+  <div class="no-data-message" *ngIf="filteredBatches?.length == 0">
+    <ion-item>{{noDataMessage}}</ion-item>
   </div>
 
   <ion-list class="list-items ion-no-padding" no-margin>
