feat(#338): Fix mobile survey navigation

--- a/src/app/inspection/components/survey-parent-child-question/survey-parent-child-question.component.html
+++ b/src/app/inspection/components/survey-parent-child-question/survey-parent-child-question.component.html
@@ -1,4 +1,4 @@
-<div class="question-container">
+<div class="question-container" [ngStyle]="{'display':displayGroup}">
   <div class="parent-question-title">
     <h4 (click)="manageQuestionGroupDisplay()">{{answer.title}} #{{groupIndex+1}} <ion-icon name="{{groupIcon}}">
       </ion-icon>
