Fix() Use Ionic 4.12 daily build to fix menu

--- a/src/app/inspection-list/inspection-list.page.html
+++ b/src/app/inspection-list/inspection-list.page.html
@@ -13,7 +13,7 @@
 
 <ion-content>
 
-  <ion-refresher (ionRefresh)="refreshList($event)">
+  <ion-refresher (ionRefresh)="refreshList($event)" slot="fixed">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
