--- a/src/app/inspection/inspection-home/inspection-home.component.html
+++ b/src/app/inspection/inspection-home/inspection-home.component.html
@@ -9,7 +9,7 @@
       <ion-list class="menu-items ion-no-padding">
         <ion-menu-toggle auto-hide="false" *ngFor="let menuItem of menuItems">
           <ion-item class="text-menu" *ngIf="menuItem.enabled" [routerLink]="['/' + getFullUrl(menuItem.page)]"
-            routerLinkActive="active-item">
+            routerLinkActive="active-item" routerDirection="root" >
             <ion-icon slot="start" [name]="menuItem.icon" class="menu-icon"></ion-icon>
             <ion-label>{{menuItem.title}}</ion-label>
           </ion-item>
